Fixed z-index conflict with alerts and section.cover

--- a/css/alicht.css
+++ b/css/alicht.css
@@ -192,7 +192,7 @@ body > section.cover {
 body > section.cover:first-of-type {
     padding-top: 110px;
 }
-body > section.cover > * {
+body > section.cover > *:not(.alert) {
     margin-left: auto;
     margin-right: auto;
     max-width: calc(1170px - 4.4rem);
@@ -662,6 +662,7 @@ h1 .avatar {
     position: relative;
     color: #27DCE9;
     box-sizing: border-box;
+	z-index: 1;
 }
 .alert:before { /* We're using Octicons as labels */
     font: normal normal normal 20px/1 octicons;
